--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ authors = ["Jack Sleight <jacksleight@hotmail.co.uk>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 numpy = "^1.26.2"
 pandas = "^2.1.3"
 scikit-learn = "^1.3.2"
 matplotlib = "^3.8.2"
+seaborn = "^0.13.0"
 
 
 [tool.poetry.group.test.dependencies]
