--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,16 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  link:
+    runs-on: ubuntu-latest
+    container:
+      image: docker.io/jsleight1/pydata:3.10-latest
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+      - name: Run lint 
+        run: |
+          poetry run black . --check --verbose --diff --color
   test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
