--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydata"
-version = "0.1.0"
+version = "0.0.0.9000"
 description = ""
 authors = ["Jack Sleight <jacksleight@hotmail.co.uk>"]
 readme = "README.md"
@@ -17,6 +17,14 @@ seaborn = "^0.13.0"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
 pytest-snapshot = "^0.9.0"
+
+
+[tool.poetry.group.lint.dependencies]
+black = "^23.12.0"
+
+
+[tool.poetry.group.coverage.dependencies]
+coverage = "^7.3.2"
 
 [build-system]
 requires = ["poetry-core"]
