--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,11 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master", "development" ]
+    branches:    
+      - '**'        # matches every branch
   pull_request:
-    branches: [ "master", "development" ]
+    branches:    
+      - '**'        # matches every branch
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,6 +26,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run lint 
         run: |
+          pip install black
           poetry run black . --check --verbose --diff --color
   test:
     # The type of runner that the job will run on
