--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^2.1.3"
 scikit-learn = "^1.3.2"
 matplotlib = "^3.8.2"
 seaborn = "^0.13.0"
+umap-learn = "^0.5.5"
 
 
 [tool.poetry.group.test.dependencies]
