--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ scikit-learn = "^1.3.2"
 matplotlib = "^3.8.2"
 seaborn = "^0.13.0"
 umap-learn = "^0.5.5"
+plotly-express = "^0.4.1"
 
 
 [tool.poetry.group.test.dependencies]
