--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -56,6 +56,7 @@ jobs:
           poetry run coverage json
       - name: Get coverage percentage 
         id: cov_perc
+        uses: actions/checkout@v3
         with: 
           path: 'coverage.json'
         run: |
@@ -63,6 +64,7 @@ jobs:
       
       - name: Create coverage badge 
         id: cov_badge
+        uses: actions/checkout@v3
         run: |
           echo ${{ steps.cov_perc.outputs.covn }}
           anybadge --label="Coverage" --value=$covn --file=coverage.svg 25=red 50=orange 75=yellow 100=green
