--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -59,13 +59,13 @@ jobs:
         uses: actions/checkout@v3
         with: 
           path: 'coverage.json'
-        run: |
+      - run: |
           covn=$(cat coverage.json | jq '.["totals"]["percent_covered_display"]' | sed 's/"//g')%
       
       - name: Create coverage badge 
         id: cov_badge
         uses: actions/checkout@v3
-        run: |
+      - run: |
           echo ${{ steps.cov_perc.outputs.covn }}
           anybadge --label="Coverage" --value=$covn --file=coverage.svg 25=red 50=orange 75=yellow 100=green
 
