--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -54,21 +54,9 @@ jobs:
           poetry check
           poetry run coverage run -m pytest
           poetry run coverage json
-      - name: Get coverage percentage 
-        id: cov_perc
-        uses: actions/checkout@v3
-        with: 
-          path: 'coverage.json'
-      - run: |
           covn=$(cat coverage.json | jq '.["totals"]["percent_covered_display"]' | sed 's/"//g')%
-      
-      - name: Create coverage badge 
-        id: cov_badge
-        uses: actions/checkout@v3
-      - run: |
-          echo ${{ steps.cov_perc.outputs.covn }}
-          anybadge --label="Coverage" --value=$covn --file=coverage.svg 25=red 50=orange 75=yellow 100=green
-
+          echo $covn
+          anybadge --label="Coverage" --value=$covn --file=coverage.svg 25=red 50=orange 75=yellow 100=green    
   readme:
     runs-on: ubuntu-latest
     container:
