--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -40,6 +40,9 @@ jobs:
           poetry check
           poetry run pytest
   coverage:
+    environment: 
+      name: github-pages 
+      url: ${{ steps.deployment.outputs.page_url }} 
     runs-on: ubuntu-latest
     container:
       image: docker.io/jsleight1/pydata:3.10-latest
@@ -54,9 +57,17 @@ jobs:
           poetry check
           poetry run coverage run -m pytest
           poetry run coverage json
+          poerty run coverage html
           covn=$(cat coverage.json | jq '.["totals"]["percent_covered_display"]' | sed 's/"//g')%
           echo $covn
           anybadge --label="Coverage" --value=$covn --file=coverage.svg 25=red 50=orange 75=yellow 100=green    
+      - name: upload artifact 
+        uses: actions/upload-pages-artifact@v1
+        with: 
+          path: './htmlcov/'
+      - name: deploy to Github pages 
+        uses: actions/deploy-pages@v2
+        id: deployment
   readme:
     runs-on: ubuntu-latest
     container:
