separate test and coverage ciworkflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Test
 
 # Controls when the workflow will run
 on:
@@ -39,35 +39,6 @@ jobs:
           poetry --version
           poetry check
           poetry run pytest
-  coverage:
-    environment: 
-      name: github-pages 
-      url: ${{ steps.deployment.outputs.page_url }} 
-    runs-on: ubuntu-latest
-    container:
-      image: docker.io/jsleight1/pydata:3.10-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Generate coverage report
-        id: coverage
-        run: |
-          pip install anybadge
-          apt-get -y install jq
-          poetry --version
-          poetry check
-          poetry run coverage run -m pytest
-          poetry run coverage json
-          poerty run coverage html
-          covn=$(cat coverage.json | jq '.["totals"]["percent_covered_display"]' | sed 's/"//g')%
-          echo $covn
-          anybadge --label="Coverage" --value=$covn --file=coverage.svg 25=red 50=orange 75=yellow 100=green    
-      - name: upload artifact 
-        uses: actions/upload-pages-artifact@v1
-        with: 
-          path: './htmlcov/'
-      - name: deploy to Github pages 
-        uses: actions/deploy-pages@v2
-        id: deployment
   readme:
     runs-on: ubuntu-latest
     container:
