--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Jack Sleight <jacksleight@hotmail.co.uk>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 numpy = "^1.26.2"
 pandas = "^2.1.3"
 scikit-learn = "^1.3.2"
@@ -14,6 +14,7 @@ matplotlib = "^3.8.2"
 seaborn = "^0.13.0"
 umap-learn = "^0.5.5"
 plotly-express = "^0.4.1"
+rnanorm = "^2.1.0"
 
 
 [tool.poetry.group.test.dependencies]
